--- a/Last.fm-Scrubbler-WPF/Views/FriendScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/FriendScrobbleView.xaml
@@ -72,10 +72,10 @@
       </Button>
     </Grid>
 
-    <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" VerticalAlignment="Stretch" ItemsSource="{Binding FetchedScrobbles}">
+    <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" VerticalAlignment="Stretch" ItemsSource="{Binding FetchedScrobbles}" local:GridViewSort.AutoSort="True">
       <ListView.View>
         <GridView>
-          <GridViewColumn Header="Scrobble?">
+          <GridViewColumn Header="Scrobble?" local:GridViewSort.PropertyName="ToScrobble">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
                 <CheckBox IsChecked="{Binding ToScrobble}" IsEnabled="{Binding IsEnabled}" HorizontalAlignment="Center"/>
@@ -100,21 +100,21 @@
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Artist">
+          <GridViewColumn Header="Artist" local:GridViewSort.PropertyName="Scrobble.ArtistName">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
                 <Label Grid.Column="4" VerticalAlignment="Center" Content="{Binding Scrobble.ArtistName}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Track Title">
+          <GridViewColumn Header="Track Title" local:GridViewSort.PropertyName="Scrobble.Name">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
                 <Label Grid.Column="4" VerticalAlignment="Center" Content="{Binding Scrobble.Name}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Date Scrobbled">
+          <GridViewColumn Header="Date Scrobbled" local:GridViewSort.PropertyName="Scrobble.TimePlayed.LocalDateTime">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
                 <Label Grid.Column="10" VerticalAlignment="Center" Content="{Binding Scrobble.TimePlayed.LocalDateTime}"/>
