Revert "Fix typo"
This reverts commit cf95ca5eedad1c296bdfafedc526d8ae4ea6c6a5.

--- a/Last.fm-Scrubbler-WPF/Views/ReleaseResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ReleaseResultView.xaml
@@ -20,7 +20,7 @@
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
 
-    <Button Grid.Row="0" Content="Back To Artists" HorizontalAlignment="Left"
+    <Button Grid.Row="0" Content="Back To Artist" HorizontalAlignment="Left"
             Visibility="{Binding FetchedReleaseThroughArtist, Converter={StaticResource boolToVis}}">
       <i:Interaction.Triggers>
         <i:EventTrigger EventName="Click">
