Add ViewModelBase, for StatusUpdate and EnableControls

--- a/Last.fm-Scrubbler-WPF/Views/PasteYourTasteView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/PasteYourTasteView.xaml
@@ -45,15 +45,15 @@
     </Grid.ColumnDefinitions>
 
     <Label Grid.Row="0" Grid.Column="0" Content="Username:"/>
-    <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding Username}"/>
+    <TextBox Grid.Row="0" Grid.Column="2" IsEnabled="{Binding EnableControls}" Text="{Binding Username}"/>
 
     <Label Grid.Row="0" Grid.Column="4" Content="Timespan:"/>
-    <ComboBox Grid.Row="0" Grid.Column="6" ItemsSource="{Binding Source={StaticResource TimeSpanDataProvider}}" SelectedItem="{Binding TimeSpan}"/>
+    <ComboBox Grid.Row="0" Grid.Column="6" IsEnabled="{Binding EnableControls}" ItemsSource="{Binding Source={StaticResource TimeSpanDataProvider}}" SelectedItem="{Binding TimeSpan}"/>
 
     <Label Grid.Row="0" Grid.Column="8" Content="Amount:"/>
-    <xctk:IntegerUpDown Grid.Row="0" Grid.Column="10" Minimum="1" Maximum="1000" Value="{Binding Amount}"/>
+    <xctk:IntegerUpDown Grid.Row="0" Grid.Column="10" Minimum="1" Maximum="1000" IsEnabled="{Binding EnableControls}" Value="{Binding Amount}"/>
 
-    <Button Grid.Row="0" Grid.Column="12" Content="Fetch">
+    <Button Grid.Row="0" Grid.Column="12" IsEnabled="{Binding EnableControls}" Content="Fetch">
       <i:Interaction.Triggers>
         <i:EventTrigger EventName="Click">
           <cal:ActionMessage MethodName="GetTopArtists"/>
@@ -73,7 +73,7 @@
       </Grid.ColumnDefinitions>
 
       <TextBox Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" IsReadOnly="True" Text="{Binding PasteText}"/>
-      <Button Grid.Row="0" Grid.Column="2">
+      <Button Grid.Row="0" Grid.Column="2" IsEnabled="{Binding CanCopy}">
         <i:Interaction.Triggers>
           <i:EventTrigger EventName="Click">
             <cal:ActionMessage MethodName="CopyTasteText"/>
